<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_access_time_black_24dp"

            android:title="Class Routine" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_empty_rm"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_emptyRoom" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_exam_routine"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="Exam Routine" />

        <item
            android:id="@+id/nav_cus_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_customSerach" />

        <item
            android:id="@+id/nav_coun_hour"
            android:icon="@drawable/ic_group_green_24dp"
            android:title="Counselling Time" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>